Changed some local variables.